unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/zkfedex__QueuedShipmentStatus__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Shipment Status</label>
    <nameField>
        <displayFormat>QS-Status-{00000000}</displayFormat>
        <label>Queued Shipment Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>