unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__AddressValidationLocationDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AddressValidationLocationDescription__c</fullName>
    <label>Address Validation Location Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>RESIDENTIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>