unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__AddressValidationScore__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AddressValidationScore__c</fullName>
    <label>Address Validation Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>