unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__BulkShipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BulkShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Shipment</label>
    <referenceTo>zkfedex__BulkShipment__c</referenceTo>
    <relationshipLabel>FedEx Queued Shipment Status</relationshipLabel>
    <relationshipName>FedEx_Queued_Shipment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>