unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__PrintBatchId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PrintBatchId__c</fullName>
    <label>Print Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>