unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__Status__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PROCESSING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>VALIDATED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>