unpackaged/main/default/objects/zkfedex__QueuedShipmentStatus__c/fields/zkfedex__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>